--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 
+    <h1> Aris Peci</h1>
+
+    <h2>HENKILÖTIEDOT</h2>
+
+    <h3>Friskinkatu 2b, runösmäki</h3>
+    <h3>ap7699@edu.turku.fi</h3>
+    <h3>0401929226</h3>
+
+    <h2>HENKILÖKOHTAINEN PROFIILI</h2>
+
+    <h3>olen 17 vuotta, opiskelen juhanuskukkulas ohjelmointin olen ekälvuoden tykkän opiskelä ohjelmointi. Aloitin opiman ohjelmointi 2 vuotta sitten ja tykkän</h3>
+
+    <h2>KOULTUS</h2>
+
+    <H3>valmistuin 9 luokka turun normali koulu eli norssi varissuolla ja hankin juhanuskukkulas tiet ja viestintäteknikka kiinosta ja hankin</H3>
+
+    <h2>TYÖKOKEMUS</h2>
+
+    <h3>kesätyö K Supermarket </h3>
+
+    <h2>KIELET</h2>
+
+    <ul>
+        <li>Albania</li>
+        <li>Suomi</li>
+        <li>Englant</li>
+    </ul>  
     
-    
+    <img src="images/cv.webp" alt="">
 </body>
 </html>
