--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
     <h2>HENKILÖTIEDOT</h2>
 
-    <h3>Friskinkatu 2b, runösmäki</h3>
-    <h3>ap7699@edu.turku.fi</h3>
-    <h3>0401929226</h3>
+    <p>Friskinkatu 2b, runösmäki</p>
+    <p>ap7699@edu.turku.fi</p>
+    <p>0401929226</p>
 
     <h2>HENKILÖKOHTAINEN PROFIILI</h2>
 
-    <h3>olen 17 vuotta, opiskelen juhanuskukkulas ohjelmointin olen ekälvuoden tykkän opiskelä ohjelmointi. Aloitin opiman ohjelmointi 2 vuotta sitten ja tykkän</h3>
+    <p>olen 17 vuotta, opiskelen juhanuskukkulas ohjelmointin olen ekälvuoden tykkän opiskelä ohjelmointi. Aloitin opiman ohjelmointi 2 vuotta sitten ja tykkän</p>
 
     <h2>KOULTUS</h2>
 
-    <H3>valmistuin 9 luokka turun normali koulu eli norssi varissuolla ja hankin juhanuskukkulas tiet ja viestintäteknikka kiinosta ja hankin</H3>
+    <p>valmistuin 9 luokka turun normali koulu eli norssi varissuolla ja hankin juhanuskukkulas tiet ja viestintäteknikka kiinosta ja hankin</p>
 
     <h2>TYÖKOKEMUS</h2>
 
-    <h3>kesätyö K Supermarket </h3>
+    <p>kesätyö K Supermarket</p>
 
     <h2>KIELET</h2>
 
