--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <button onclick="document.location='työkokemus.html'">työkokemus</button>
+    <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
     <h1> Aris Peci</h1>
 
     <h2>HENKILÖTIEDOT</h2>
