--- a/keskustelusivu.html
+++ b/keskustelusivu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>keskustelusivu</title>
@@ -26,5 +27,38 @@
 
     <input type="checkbox" id="consent" name="consent" value="consent">
     <label for="consent">you consent that the information provided in the discussion may be used for marketing purpose</label>
+
+    <table>
+        <tr>
+          <th>Email</th>
+          <th>Date</th>
+          <th>comment</th>
+        </tr>
+        <tr>
+          <td>ap7699@edu.turku.Fi</td>
+          <td>13/11/2007</td>
+          <td>this website helped me to understand what do i need to put on my cv thank you</td>
+        </tr>
+        <tr>
+          <td>peciaris41@gmail.com</td>
+          <td>6/2/2000</td>
+          <td>this web is simple with nothing extra very  simple and easy to use </td>
+        </tr>
+        <tr>
+            <td>joni.456@gmail.com</td>
+            <td>3/7/2003</td>
+            <td>love this but im not sure if i liked the part where you consent that the discussion will be used fir marketing</td>
+        </tr>
+        <tr>
+            <td>mikko9324@gmail.com</td>
+            <td>6/10/1999</td>
+            <td>nice job i like this but it would be better if some color was added</td>
+        </tr>
+        <tr>
+            <td>leonit.n9@gmail.com</td>
+            <td>5/4/2002</td>
+            <td>i doon see anything special it would be nice if you added more color</td>
+        </tr>
+      </table>
 </body>
 </html>
