--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <li>Suomi</li>
         <li>Englant</li>
     </ul>  
+
+    <h1>Portfolio</h1>
+
+    tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset
     
     <img src="images/cv.webp" alt="">
 </body>
