--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <h1>Portfolio</h1>
 
-    tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset
+    <p>tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset</p>
     
     <img src="images/cv.webp" alt="">
 </body>
