--- a/keskustelusivu.html
+++ b/keskustelusivu.html
@@ -10,6 +10,9 @@
     
     <h1>user</h1>
 
+    
+    <button onclick="document.location='index.html'">työkokemus</button>
+
     <form action="">
         <label for="birthday">birthday:</label>
         <input type="date" name="birthday" id="birthday">
