--- a/työkokemus.html
+++ b/työkokemus.html
@@ -10,7 +10,7 @@
         <h1>Oma työkokemukseni</h1>
         <nav>
             <ul>
-                <li><a href="cv.html">CV</a></li>
+                <li><a href="index.html">CV</a></li>
                 <li><a href="tyokokemus.html">Työkokemus</a></li>
             </ul>
         </nav>
