--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <button onclick="document.location='työkokemus.html'">työkokemus</button>
     <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
+    <button onclick="document.location='portfolio.html'">portfolio</button>
     <h1> Aris Peci</h1>
 
     <h2>HENKILÖTIEDOT</h2>
@@ -34,9 +35,6 @@
         <li>Englant</li>
     </ul>  
 
-    <h1>Portfolio</h1>
-
-    <p>tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset</p>
     
     <img src="images/cv.webp" alt="">
 </body>
