--- a/keskustelusivu.html
+++ b/keskustelusivu.html
@@ -11,7 +11,7 @@
     <h1>user</h1>
 
     
-    <button onclick="document.location='index.html'">työkokemus</button>
+    <button onclick="document.location='index.html'">cv</button>
 
     <form action="">
         <label for="birthday">birthday:</label>
@@ -63,5 +63,12 @@
             <td>i doon see anything special it would be nice if you added more color</td>
         </tr>
       </table>
+
+      <details>
+        <summary>Comment</summary>
+        <p>comment while using you account</p>
+      </details>
+
+      <dialog open>This is an open dialog window</dialog>
 </body>
 </html>
