--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,24 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>portfolio</title>
-    </head>
-    <body>
-        <button onclick="document.location='index.html'">cv</button>
-        <h1>Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>portfolio</title>
+</head>
+<body>
+    <button onclick="document.location='työkokemus.html'">työkokemus</button>
+    <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
+    <button onclick="document.location='portfolio.html'">portfolio</button>
 
-        <p>tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset</p>
-        
-    </body>
-    </html>
+    <h1>Portfolio</h1>
+
+    <p>tässä portfoliossa on WEB-ohjelmointi 1- kurssin harjoitukset</p>
+
+    <nav>
+        <ul>
+            <li><a href="keskustelusivu.html">keskustelusivu</a></li>
+        </ul>
+    </nav>
+    
+</body>
+</html>
