--- a/työkokemus.html
+++ b/työkokemus.html
@@ -8,12 +8,10 @@
 <body>
     <header>
         <h1>Oma työkokemukseni</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">CV</a></li>
-                <li><a href="tyokokemus.html">Työkokemus</a></li>
-            </ul>
-        </nav>
+        <button onclick="document.location='index.html'">työkokemus</button>
+        <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
+        <button onclick="document.location='portfolio.html'">portfolio</button>
+    
     </header>
 
     <main>
