--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="TIEV24N">
+    <meta name="keywords" content="HTML,CSS,github">
+    <meta name="author" content="Aris">
     <title>Document</title>
 </head>
 <body>
