--- a/keskustelusivu.html
+++ b/keskustelusivu.html
@@ -11,9 +11,9 @@
     <h1>user</h1>
 
     <button onclick="document.location='työkokemus.html'">työkokemus</button>
-    <button onclick="document.location='index.html'">keskustelusivu</button>
+    <button onclick="document.location='index.html'">cv</button>
     <button onclick="document.location='portfolio.html'">portfolio</button>
-    
+
     <form action="">
         <label for="birthday">birthday:</label>
         <input type="date" name="birthday" id="birthday">
