--- a/työkokemus.html
+++ b/työkokemus.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Oma työkokemukseni</h1>
-        <button onclick="document.location='index.html'">työkokemus</button>
+        <button onclick="document.location='index.html'">cv</button>
         <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
         <button onclick="document.location='portfolio.html'">portfolio</button>
     
