--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,8 @@
 <body>
     <button onclick="document.location='työkokemus.html'">työkokemus</button>
     <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
-    <button onclick="document.location='portfolio.html'">portfolio</button>
+    <button onclick="document.location='index.html'">cv</button>
+
 
     <h1>Portfolio</h1>
 
