--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <button onclick="document.location='työkokemus.html'">työkokemus</button>
     <button onclick="document.location='keskustelusivu.html'">keskustelusivu</button>
     <button onclick="document.location='index.html'">cv</button>
+    <button onclick="document.location='flex.html'">flex</button>
 
 
     <h1>Portfolio</h1>
