--- a/flex.html
+++ b/flex.html
@@ -10,9 +10,9 @@
     <button onclick="document.location='portfolio.html'">portfolio</button>
 
     <div class="flex-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>  
+        <div>Pokemonia</div>
+        <div>Digimonia</div>
+        <div>Palwordin </div>  
       </div>
 </body>
 </html>
