--- a/flex.html
+++ b/flex.html
@@ -1,18 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="flex.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flex Page</title>
+    <link rel="stylesheet" href="path/to/general.css">
+    <link rel="stylesheet" href="flex.css">
+   
 </head>
 <body>
-    <button onclick="document.location='portfolio.html'">portfolio</button>
+    <header>
+        <nav>
+            <a href="portofolio.html">Back to Portfolio</a>
+        </nav>
+    </header>
 
     <div class="flex-container">
-        <div>Pokemonia</div>
-        <div>Digimonia</div>
-        <div>Palwordin </div>  
-      </div>
+        <div class="flex-item">
+            <h2>Pokemon</h2>
+            <div class="poke-item">
+                <img src="images/wartortle.png" alt="wartortle">
+                <span>wartortle</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/squirtle.png" alt="squirtle">
+                <span>squirtle</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/Metapod.png" alt="Metapod">
+                <span>Metapod</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/charmeleon.png" alt="charmeleon">
+                <span>charmeleon</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/charmander.png" alt="charmander">
+                <span>charmander</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/charizard.png" alt="charizard">
+                <span>charizard</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/Caterpie.png" alt="Caterpie">
+                <span>Caterpie</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/Butterfree.png" alt="Butterfree">
+                <span>Butterfree</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/Blastoise.png" alt="Blastoise">
+                <span>Blastoise</span>
+            </div>
+            <div class="poke-item">
+                <img src="images/bulbasaur.png" alt="bulbasaur">
+                <span>bulbasaur</span>
+            </div>
+        </div>
+
+        <div class="flex-item">
+            <h2>Digimon</h2>
+            <div class="digi-item">
+                <img src="images/Abbadomon.jpg" alt="Abbadomon">
+                <span>Abbadomon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Aegoichusmon.jpg" alt="Aegoichusmon">
+                <span>Aegoichusmon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Aequcedramon.jpg" alt="Aequcedramon">
+                <span>Aequcedramon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Agnimon.jpg" alt="Agnimon">
+                <span>Agnimon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Agumon.jpg" alt="Agumon">
+                <span>Agumon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Algomon.jpg" alt="Algomon">
+                <span>Algomon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Allomon.jpg" alt="Allomon">
+                <span>Allomon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Alraumon.jpg" alt="Alraumon">
+                <span>Alraumon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Arresterdramon.jpg" alt="Arresterdramon">
+                <span>Arresterdramon</span>
+            </div>
+            <div class="digi-item">
+                <img src="images/Astegon.png" alt="Astegon">
+                <span>Astegon</span>
+            </div>
+        </div>
+
+        <div class="flex-item">
+            <h2>Palworld Pals</h2>
+            <div class="pal-item">
+                <img src="images/Anubis.png" alt="Anubis">
+                <span>Anubis</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Azurmane.png" alt="Azurmane">
+                <span>Azurmane</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/babydmon.jpg" alt="babydmon">
+                <span>babydmon</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Beakon.png" alt="Beakon">
+                <span>Beakon</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Bushi.png" alt="Bushi">
+                <span>Bushi</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Beegarde.png" alt="Beegarde">
+                <span>Beegarde</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Bellanoir.png" alt="Bellanoir">
+                <span>Bellanoir</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Blazamut.png" alt="Blazamut">
+                <span>Blazamut</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Bristla.png" alt="Bristla">
+                <span>Bristla</span>
+            </div>
+            <div class="pal-item">
+                <img src="images/Arsox.png" alt="Arsox">
+                <span>Arsox</span>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+    </footer>
 </body>
 </html>
